--- a/hyperledger/peer-base.yaml
+++ b/hyperledger/peer-base.yaml
@@ -18,7 +18,8 @@ services:
       # the following setting starts chaincode containers on the same
       # bridge network as the peers
       # https://docs.docker.com/compose/networking/
-      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=blockchain_default
+      - CORE_VM_DOCKER_HOSTCONFIG_NETWORKMODE=hyperledger_default
+      # blockchain_default
       #- CORE_LOGGING_LEVEL=DEBUG #deprecated, replaced by FABRIC_LOGGING_SPEC = FATAL | PANIC | ERROR | WARNING | INFO | DEBUG
       - FABRIC_LOGGING_SPEC=INFO
       - CORE_CHAINCODE_LOGGING_LEVEL=DEBUG
