--- a/hyperledger/docker-compose-ptb.yaml
+++ b/hyperledger/docker-compose-ptb.yaml
@@ -86,7 +86,7 @@ services:
 
   couchdb0:
     container_name: couchdb0
-    image: hyperledger/fabric-couchdb
+    image: hyperledger/fabric-couchdb:0.4.15
     ports:
       - 5984:5984
     environment:
@@ -117,7 +117,7 @@ services:
 
   couchdb1:
     container_name: couchdb1
-    image: hyperledger/fabric-couchdb
+    image: hyperledger/fabric-couchdb:0.4.15
     ports:
       - 6984:5984
     environment:
